# olist-python

./: .gitignore  README.md  etl.py  pyproject.toml
etl/: config.py  db.py  pipeline.py
etl/extract/: load_csvs.py
etl/transform/: clean.py  dwh.py  quality.py
notebooks/: dia3_merge.ipynb
tests/transform/: test_clean.py  test_dwh.py  test_quality.py
